# nbr

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
nbr/: __init__.py  cell.py  config.py  contents.py  exceptions.py  executor.py  kernel.py  notebook.py  runner.py  settings.py
nbr/schemas/: message.py  result.py
nbr/utils/: client.py  contents.py  execution.py  message.py  session.py  sessions.py  websocket.py
nbrunner/: __main__.py  contents.py  kernel.py  notebook.py  schemas.py
tests/: test_1.py  test_kernel.py  test_notebook.py  tools.py  utils.py
tests/data/: nb_test_contents.json  nb_test_folder_contents.json  session_test.json
tests/notebooks/: copy_test_nb.ipynb  test_nb.ipynb
tests/utils/: test_client.py  test_contents.py  test_message.py  test_session.py  test_websocket.py
