[tool.poetry]
name = "nbrunner"
version = "0.1.0"
description = "Remote jupyter notebooks runner"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.2"
pydantic = "^1.9.0"
httpx = "^0.22.0"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
