[tool.poetry]
name = "nbr"
version = "0.1.0"
description = "Remote jupyter notebooks runner"
authors = ["zhivykh"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.2"
pydantic = "^1.9.0"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.13.0"
mypy = "^0.942"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = ["C0103", "C0111", "R0903"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[tool.pytest]
addopts = "--cov=app --cov-fail-under=60"
python_files = "test_*.py"
python_classes = ["*Test", "Test*"]
python_functions = "test__*"


[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]